# Ukkonen

./: 2comp  CMakeLists.txt  Ukkonen.sln  bibcomprim  bibleIntro.txt  bijbel  bla.out  bveelatest  compressed  eerste_deadline.bash  introtest2  sources  test.txt  test2.txt  testbanaan  testprocent
Ukkonen/: SuffixTree.c  SuffixTree.h  Ukkonen.vcxproj  Ukkonen.vcxproj.filters
src/lz77/: compress.c  compress.h  decompress.c  main.c  operations.c  structure.c  ukkonen.h
src/ukkonen/: main.c  operations.c  structure.c  ukkonen.c  ukkonen.h
src/ukkonen_old/: ukkonen.c
tests/: debug1  heelveelatest  placeholder.txt  veelatest
